# judge

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/skills/curate-rule-example/: SKILL.md
.github/workflows/: ci.yml
judge-mcp/: README.md  package-lock.json  package.json
judge-mcp/src/: index.ts  judge.ts
src/: advisories.rs  api_surface.rs  api_surface_deep.rs  baseline.rs  boundaries.rs  boundaries_deep.rs  complexity.rs  coverage.rs  dead_code.rs  deep.rs  dep_graph.rs  deps.rs  duplication.rs  finding.rs  functions.rs  gate.rs  git.rs  health_score.rs  ingest.rs  lib.rs  main.rs  markdown.rs  module_graph.rs  ownership.rs  pattern.rs  principle.rs  provenance.rs  reachability.rs  rule_registry.rs  sarif.rs  security.rs  slop.rs  slop_structural.rs  slop_structural_deep.rs  slop_text.rs  slopsquat.rs  suppression.rs  test_util.rs
src/data/: popular_crates.txt
