[package]
name = "cargo-judge"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Codebase intelligence for Rust workspaces"
license = "MIT"
repository = "https://github.com/casoon/judge"
keywords = ["cargo-plugin", "static-analysis", "code-quality", "complexity", "duplication"]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]
publish = true

[lib]
name = "judge"

[[bin]]
name = "cargo-judge"
path = "src/main.rs"

[features]
default = []
deep = ["dep:ra_ap_ide", "dep:ra_ap_load-cargo"]

[dependencies]
cargo_metadata = "0.19"
clap = { version = "4.6.2", features = ["derive"] }
gix = "0.85.0"
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
ra_ap_ide = { version = "=0.0.342", optional = true }
ra_ap_load-cargo = { version = "=0.0.342", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "visit"] }
toml = "0.8"
